2008-01-18  Akim Demaille  <demaille@gostai.com>

	Update libport uses.
	We now use lib/libport, include/libport, build-aux, instead
	of looking for then inside libport.  They are symlinked at
	bootstrap time.
	* bootstrap: List the modules we subscribe to.
	* Makefile.am, configure.ac, src/Makefile.am,
	* src/kernel.mk, src/parser/parser.mk: Adjust.

2008-01-18  Akim Demaille  <demaille@gostai.com>

	Adjust to urbi-sdk-remote.
	* src/Makefile.am, src/kernel.mk (uobject_srcdir): Adjust.
	* urbi-sdk: Rename as...
	* urbi-sdk-remote: this.

2008-01-16  Matthieu Nottale  <nottale@gostai.com>

	Mark new test every-emit as XFAIL.
	* tests-local.mk: Here.

2008-01-15  Thomas Moulard  <thomas@moulard.net>

	Revert patches 2371 to 2374.
	* configure.ac,
	* src/Makefile.am,
	* src/console-server.cc,
	* src/kernel.mk: Revert.
	* src/console-server-options.cc: Remove.
	* src/console-server-options.hh: Remove.
	* src/console-server.hh: Remove.

2008-01-15  Akim Demaille  <demaille@gostai.com>

	merge -r 1835:2373 https://svn.gostai.com/svn/kernel1/branches/1.5
	2008-01-11  Guillaume Deslandes  <deslandes@gostai.com>
	Merge foreach patch (trunk r2237:2238).
	* src/ucommand.cc: Here.
	* tests-local.mk: Remove 1.x/for-in from XFAILS.

	2008-01-11  Guillaume Deslandes  <deslandes@gostai.com>
	Implicite "notag" is now "".
	Update tests.
	* include/kernel/uconnection.hh,
	* src/tag-info.cc,
	* src/ucommand.cc,
	* src/uconnection.cc,
	* src/userver.cc: Here.

	2008-01-09  Guillaume Deslandes  <deslandes@gostai.com>
	Prevent infinite loop when readin value in notifyaccess.
	* src/uvariable.cc: Here.

	2008-01-08  Guillaume Deslandes  <deslandes@gostai.com>
	Update check-buildfarm.
	* Makefile.am: Here.

	2008-01-07  Guillaume Deslandes  <deslandes@gostai.com>
	Add xfail tests.
	* tests-local.mk: Here.

	2008-01-02  Guillaume Deslandes  <deslandes@gostai.com>
	Fix ,.
	* src/parser/ugrammar.y: Restore right associativity.

	2007-12-25  Akim Demaille  <demaille@gostai.com>