@@ -1,3 +1,8 @@
+2008-01-19  Benoit Sigoure  <tsuna@lrde.epita.fr>
+
+	Remove a deprecated file.
+	* buildnumber.php: Remove.
+
 2008-01-18  Akim Demaille  <demaille@gostai.com>
 
 	Update libport uses.
